argocd/components/stalwart/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stalwart
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  serviceName: stalwart
  replicas: 1
  selector:
    matchLabels:
      app: stalwart
  template:
    metadata:
      labels:
        app: stalwart
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 2000
        runAsGroup: 2000
      # ConfigMap with DB connection info
      volumes:
        - name: config
          configMap:
            name: stalwart-config
      containers:
        - name: stalwart
          image: stalwartlabs/stalwart:v0.16.1
          command: /bin/cat
          args: /opt/stalwart/config.json
          imagePullPolicy: IfNotPresent
          args:
            - "--config"
            - "/etc/stalwart/config.json"
          ports:
            - name: smtp
              containerPort: 25
            - name: smtps
              containerPort: 465
            - name: submission
              containerPort: 587
            - name: imap
              containerPort: 143
            - name: imaps
              containerPort: 993
            - name: pop3
              containerPort: 110
            - name: pop3s
              containerPort: 995
            - name: sieve
              containerPort: 4190
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: mgmt
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: mgmt
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: mgmt
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: config
              subPath: config.json
              mountPath: /etc/stalwart/config.json
              readOnly: true
            - name: data
              mountPath: /var/lib/stalwart
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp3
        resources:
          requests:
            storage: 20Gi
